--- a/app/browserWindows/dotnetAppConfiguration/appConfig.html
+++ b/app/browserWindows/dotnetAppConfiguration/appConfig.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <title>Settings</title>    
-    <script src="./appConfig.js"></script>
+    <script>    
+      const path = require('path');
+      require(path.resolve(__dirname, './appConfig.js'));
+    </script>
     <link rel="stylesheet" href="../../../node_modules/bootstrap-css-only/css/bootstrap.css">
     <link rel="stylesheet" href="./appConfig.css">
   </head>
