--- a/app/browserWindows/main/main.html
+++ b/app/browserWindows/main/main.html
@@ -8,7 +8,7 @@
     <script>
       const path = require('path');
 
-      require(path.resolve(__dirname, '../../components/Runner.js')).register();
+      require(path.resolve(__dirname, '../../Components/Runner.js')).register();
 
       require(path.resolve(__dirname, './main'));
     </script>
