fixed mandatory command line arguments

--- a/app/browserWindows/dotnetAppConfiguration/appConfig.html
+++ b/app/browserWindows/dotnetAppConfiguration/appConfig.html
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group">
           <label for="commandArgs">Command line arguments</label>
-          <input type="string" name="commandArgs" required class="form-control"/>
+          <input type="string" name="commandArgs" class="form-control"/>
           <small class="form-text text-muted">Additional space deliminated arguments to be passed to the dotnet run command.</small>
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
@@ -65,7 +65,7 @@
       </div>
       <div class="form-group">
         <label for="commandArgs">Command line arguments</label>
-        <input type="string" name="commandArgs" required class="form-control"/>
+        <input type="string" name="commandArgs" class="form-control"/>
         <small class="form-text text-muted">Additional space deliminated arguments to be passed to the dotnet run command.</small>
       </div>
       <button type="submit" class="btn btn-primary">Insert</button>
